ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /greet
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /date
        pathType: Prefix
        backend:
          service:
            name: todays-date-service
            port:
              number: 80
      - path: /time
        pathType: Prefix
        backend:
          service:
            name: current-time-service
            port:
              number: 80
      - path: /country
        pathType: Prefix
        backend:
          service:
            name: random-country-service
            port:
              number: 80
